--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -7,7 +7,9 @@
       padding-bottom: .45rem;
     }
   }
-
+  .avatar{
+    border-radius: 0;
+  }
   .btn, .gumroad-button  {
     margin: 1rem 0;
   }
